Fix collapsed

--- a/addon/styles/design-system.css
+++ b/addon/styles/design-system.css
@@ -55,7 +55,7 @@ aside.collapsed {
 }
 
 aside.collapsed .tds-aside-title,
-aside.collapsed .nav-link > div > span {
+aside.collapsed .nav-link > span {
   display: none;
 }
 
